Added console2 to the list of packages

--- a/Packages.config
+++ b/Packages.config
@@ -28,5 +28,5 @@
   <package id="python" />
   <package id="python3" />
   <package id="TeraCopy" />
-  <package id="TeraCopy" />
+  <package id="console2" />
 </packages>
