Changed to use the x86 version of python2;

--- a/Packages.config
+++ b/Packages.config
@@ -25,7 +25,7 @@
   <package id="git" />
   <package id="lastpass" />
   <package id="Lua" />
-  <package id="python" />
+  <package id="python.x86" />
   <package id="python3" />
   <package id="TeraCopy" />
   <package id="console2" />
